--- a/multimedia/aom/Makefile
+++ b/multimedia/aom/Makefile
@@ -40,6 +40,4 @@ post-patch:
 	@${REINPLACE_CMD} 's,$${AOM_ROOT}/CHANGELOG,${DISTVERSIONFULL:S/^v//},' \
 		${WRKSRC}/build/cmake/version.cmake
 
-.include <bsd.port.pre.mk>
-.include <${PORTSDIR}/Mk/site.llvm.mk>
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
