--- a/graphics/jasper/Makefile
+++ b/graphics/jasper/Makefile
@@ -41,6 +41,4 @@ post-install-DOCS-on:
 	${MKDIR} ${STAGEDIR}${DOCSDIR}
 	${INSTALL_DATA} ${WRKSRC}/doc/jpeg2000.pdf ${STAGEDIR}${DOCSDIR}
 
-.include <bsd.port.pre.mk>
-.include <${PORTSDIR}/Mk/site.llvm.mk>
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
