--- a/graphics/poppler/Makefile
+++ b/graphics/poppler/Makefile
@@ -110,6 +110,4 @@ post-install:
 		${STAGEDIR}${PREFIX}/libdata/pkgconfig
 .endif
 
-.include <bsd.port.pre.mk>
-.include <${PORTSDIR}/Mk/site.llvm.mk>
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
