--- a/multimedia/dav1d/Makefile
+++ b/multimedia/dav1d/Makefile
@@ -53,6 +53,4 @@ MESON_ARGS_clang_i386=	-Dstack_alignment=4
 
 pre-install-TEST-on: do-test
 
-.include <bsd.port.pre.mk>
-.include <${PORTSDIR}/Mk/site.llvm.mk>
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
