--- a/multimedia/libgav1/Makefile
+++ b/multimedia/libgav1/Makefile
@@ -21,6 +21,4 @@ CMAKE_OFF+=	${CMAKE_TESTING_ON}
 CMAKE_TESTING_ON=	LIBGAV1_ENABLE_TESTS
 LDFLAGS+=	-Wl,--as-needed # avoid overlinking (abseil deps)
 
-.include <bsd.port.pre.mk>
-.include <${PORTSDIR}/Mk/site.llvm.mk>
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
