--- a/multimedia/svt-hevc/Makefile
+++ b/multimedia/svt-hevc/Makefile
@@ -38,6 +38,4 @@ post-patch:
 		-Ee '/set.*(release|debug)_flags_to_test/,/\)/d' \
 		${WRKSRC}/CMakeLists.txt
 
-.include <bsd.port.pre.mk>
-.include <${PORTSDIR}/Mk/site.llvm.mk>
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
