--- a/multimedia/vlc/Makefile
+++ b/multimedia/vlc/Makefile
@@ -403,6 +403,4 @@ post-install:
 	# plugin cache becomes stale after strip. Regenerate it:
 	${WRKSRC}/bin/vlc-cache-gen ${STAGEDIR}${PREFIX}/lib/vlc/plugins
 
-.include <bsd.port.pre.mk>
-.include <${PORTSDIR}/Mk/site.llvm.mk>
-.include <bsd.port.post.mk>
+.include <bsd.port.mk>
