--- a/math/lp_solve/Makefile
+++ b/math/lp_solve/Makefile
@@ -14,7 +14,7 @@ WRKSRC=		${WRKDIR}/${PORTNAME}_${PORTVERSION:R:R}
 
 USE_LDCONFIG=	yes
 
-BUILDENV=	${SETENV} TMPDIR="${WRKDIR}"
+BUILDENV=	${SETENV} CC="${CC}" CFLAGS="${CFLAGS}" TMPDIR="${WRKDIR}"
 
 .include <bsd.port.pre.mk>
 
@@ -27,7 +27,7 @@ LPSOLVE_ARCH=	ux64
 
 pre-build:
 	@${FIND} ${WRKSRC} -name "ccc" | ${XARGS} ${REINPLACE_CMD} -e \
-		"s|^c=.*$$|c='${CC}'|g ; \
+		"s|^c=.*$$|c='${CC} ${CFLAGS}'|g ; \
 		 s|^opts=.*$$|opts='${CFLAGS}'|g ; \
 		 s|-fpic|-fPIC|g ; \
 		 s|-ldl||g"
