--- a/devel/libgusb/Makefile
+++ b/devel/libgusb/Makefile
@@ -1,6 +1,5 @@
 PORTNAME=	libgusb
-PORTVERSION=	0.3.10
-PORTREVISION=	1
+PORTVERSION=	0.4.5
 CATEGORIES=	devel
 
 MAINTAINER=	gnome@FreeBSD.org
@@ -11,8 +10,9 @@ LICENSE=	LGPL21
 LICENSE_FILE=	${WRKSRC}/COPYING
 
 BUILD_DEPENDS=	gtk-doc>0:textproc/gtk-doc
+LIB_DEPENDS=	libjson-glib-1.0.so:devel/json-glib
 
-USES=		gnome meson pkgconfig vala:build
+USES=		gnome meson pkgconfig python:build vala:build
 
 USE_GITHUB=	yes
 GH_ACCOUNT=	hughsie
@@ -23,8 +23,11 @@ OPTIONS_DEFINE=		DOCS VAPI
 OPTIONS_DEFAULT=	DOCS VAPI
 OPTIONS_SUB=		yes
 
+DOCS_BUILD_DEPENDS=	${PYTHON_PKGNAMEPREFIX}gi-docgen>=0:textproc/py-gi-docgen@${PY_FLAVOR}
+
 .include <bsd.port.options.mk>
 
+MESON_ARGS+=	-Dumockdev=disabled
 .if !${PORT_OPTIONS:MDOCS}
 MESON_ARGS+=	-Ddocs=false
 .endif
