math/lp_solve: fix CFLAGS

--- a/math/lp_solve/Makefile
+++ b/math/lp_solve/Makefile
@@ -14,7 +14,7 @@ WRKSRC=		${WRKDIR}/${PORTNAME}_${PORTVERSION:R:R}
 
 USE_LDCONFIG=	yes
 
-BUILDENV=	${SETENV} CC="${CC}" CFLAGS="${CFLAGS}" TMPDIR="${WRKDIR}"
+BUILDENV=	${SETENV} TMPDIR="${WRKDIR}"
 
 .include <bsd.port.pre.mk>
 
