graphics/opencv: add ONNX option

--- a/graphics/opencv/Makefile
+++ b/graphics/opencv/Makefile
@@ -31,7 +31,7 @@ DATADIR=	${PREFIX}/share/${PORTNAME}4
 
 PLIST_SUB=	SHLIB_VER=${DISTVERSION}
 
-OPTIONS_DEFINE=		EIGEN GDAL GDCM HARDENING JAVA LTO OPENCL PATENTED \
+OPTIONS_DEFINE=		EIGEN GDAL GDCM HARDENING JAVA LTO ONNX OPENCL PATENTED \
 			PROTOBUF PYTHON TBB TESSERACT
 OPTIONS_DEFAULT=	DC1394 EIGEN GDAL GDCM GPHOTO2 GSTREAMER JPEG OPENBLAS \
 			OPENCL OPENEXR OPENJPEG PNG PROTOBUF PYTHON TIFF V4L \
@@ -78,6 +78,11 @@ JAVA_USES=		java
 
 LTO_DESC=	Enables Link Time Optimizations
 LTO_CMAKE_BOOL=	ENABLE_THIN_LTO
+
+ONNX_DESC=	Include Microsoft ONNX Runtim support
+ONNX_CMAKE_BOOL=	WITH_ONNX
+ONNX_CMAKE_ON=	-DONNXRT_ROOT_DIR=${LOCALBASE}
+OPENCL_LIB_DEPENDS=	libonnxruntime.so:misc/onnxruntime
 
 OPENCL_DESC=		Add OpenCL Support
 OPENCL_CMAKE_BOOL=	WITH_OPENCL
