--- a/graphics/opencv/Makefile
+++ b/graphics/opencv/Makefile
@@ -1,10 +1,6 @@
 PORTNAME=	opencv
-DISTVERSION=	4.12.0
+DISTVERSION=	4.13.0
 CATEGORIES=	graphics
-
-PATCH_SITES=	https://github.com/opencv/opencv/commit/
-PATCHFILES=	86df53155411b3ade57d0213bf8dd63006bf248f.patch:-p1 \
-		443d0ae63fad6dfd8c485d609203db16c8bd0ec3.patch:-p1
 
 MAINTAINER=	desktop@FreeBSD.org
 COMMENT=	Open Source Computer Vision library
@@ -29,7 +25,7 @@ CMAKE_OFF=	BUILD_opencv_python2 BUILD_TESTS OPENCV_GENERATE_SETUPVARS
 
 DATADIR=	${PREFIX}/share/${PORTNAME}4
 
-PLIST_SUB=	SHLIB_VER=${DISTVERSION}
+PLIST_SUB=	SHLIB_VER=${DISTVERSION} SHORTVERSION=${DISTVERSION:R:S/.//g}
 
 OPTIONS_DEFINE=		EIGEN GDAL GDCM HARDENING JAVA LTO ONNX OPENCL PATENTED \
 			PROTOBUF PYTHON TBB TESSERACT
@@ -82,7 +78,7 @@ LTO_CMAKE_BOOL=	ENABLE_THIN_LTO
 ONNX_DESC=		Include Microsoft ONNX Runtim support
 ONNX_CMAKE_BOOL=	WITH_ONNX
 ONNX_CMAKE_ON=		-DONNXRT_ROOT_DIR=${LOCALBASE}
-OPENCL_LIB_DEPENDS=	libonnxruntime.so:misc/onnxruntime
+ONNX_LIB_DEPENDS=	libonnxruntime.so:misc/onnxruntime
 
 OPENCL_DESC=		Add OpenCL Support
 OPENCL_CMAKE_BOOL=	WITH_OPENCL
