net-im/tox: update to 0.2.22

--- a/net-im/tox/Makefile
+++ b/net-im/tox/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	toxcore
-DISTVERSION=	0.2.21
-PORTREVISION=	2
+DISTVERSION=	0.2.22
+PORTREVISION=	0
 PORTEPOCH=	1
 CATEGORIES=	net-im net-p2p
 MASTER_SITES=	https://github.com/TokTok/c-${PORTNAME}/releases/download/v${DISTVERSION}/
@@ -24,6 +24,7 @@ CPE_VENDOR=	toktok
 PATHFIX_CMAKELISTSTXT=	ModulePackage.cmake
 USE_LDCONFIG=	yes
 
+CMAKE_ON=	ASAN UBSAN
 CMAKE_OFF=	CMAKE_DISABLE_FIND_PACKAGE_GTest \
 		UNITTEST
 CMAKE_TESTING_ON=	UNITTEST
