net-im/qTox: turn ASAN and UBSAN

--- a/net-im/qTox/Makefile
+++ b/net-im/qTox/Makefile
@@ -36,6 +36,7 @@ GH_TAGNAME=	3a18c44
 
 CMAKE_ARGS=	-DGIT_DESCRIBE:STRING=${DISTVERSIONPREFIX}${DISTVERSION}${DISTVERSIONSUFFIX}
 CMAKE_OFF=	USE_CCACHE STRICT_OPTIONS
+CMAKE_ON=	ASAN UBSAN
 
 OPTIONS_DEFINE=			FILTERAUDIO PLATFORM_EXTENSIONS SPELL_CHECK APPINDICATOR GTK_SYSTRAY STATUSNOTIFIER
 OPTIONS_DEFAULT=		FILTERAUDIO PLATFORM_EXTENSIONS SPELL_CHECK GTK_SYSTRAY STATUSNOTIFIER # removing GTK_SYSTRAY, STATUSNOTIFIER doesn't reduce dependencies
