--- a/x11-toolkits/wlroots017/Makefile
+++ b/x11-toolkits/wlroots017/Makefile
@@ -47,7 +47,7 @@ DRM_LIB_DEPENDS=	libudev.so:devel/libudev-devd \
 DRM_MESON_ENABLED=	session
 DRM_VARS=		BACKENDS+="drm libinput"
 
-OPENGL_RUN_DEPENDS=	mesa-dri>0:graphics/mesa-dri
+OPENGL_RUN_DEPENDS=	${GL_DEFAULT}>0:graphics/${GL_DEFAULT}
 OPENGL_USE=		GL=egl,glesv2
 OPENGL_VARS=		RENDERERS+=gles2
 
@@ -55,7 +55,7 @@ VULKAN_DESC=		Vulkan renderer
 VULKAN_BUILD_DEPENDS=	glslangValidator:graphics/glslang \
 			vulkan-headers>0:graphics/vulkan-headers
 VULKAN_LIB_DEPENDS=	libvulkan.so:graphics/vulkan-loader
-VULKAN_RUN_DEPENDS=	mesa-dri>0:graphics/mesa-dri \
+VULKAN_RUN_DEPENDS=	${GL_DEFAULT}>0:graphics/${GL_DEFAULT} \
 			vulkan-headers>0:graphics/vulkan-headers
 VULKAN_VARS=		RENDERERS+=vulkan
 
