--- a/x11/xlibre/Makefile
+++ b/x11/xlibre/Makefile
@@ -9,7 +9,7 @@ WWW=		https://github.com/X11Libre/ \
 
 USES=		metaport
 
-RUN_DEPENDS+=	${LOCALBASE}/libdata/pkgconfig/dri.pc:graphics/mesa-dri
+RUN_DEPENDS+=	${LOCALBASE}/libdata/pkgconfig/dri.pc:graphics/${GL_DEFAULT}
 
 # data
 RUN_DEPENDS+=	${LOCALBASE}/libdata/pkgconfig/xbitmaps.pc:x11/xbitmaps \
