--- a/devel/highway/Makefile
+++ b/devel/highway/Makefile
@@ -2,9 +2,9 @@ PORTNAME=	highway
 DISTVERSION=	1.3.0
 CATEGORIES=	devel
 
-PATCH_SITES=	https://github.com/${GH_ACCOUNT}/${GH_PROJECT}/commit/
-PATCHFILES+=	232b3ee08919.patch:-p1 # https://github.com/google/highway/pull/2670
-PATCHFILES+=	c00492256d71.patch:-p1 # https://github.com/google/highway/pull/2672
+#PATCH_SITES=	https://github.com/${GH_ACCOUNT}/${GH_PROJECT}/commit/
+#PATCHFILES+=	232b3ee08919.patch:-p1 # https://github.com/google/highway/pull/2670
+#PATCHFILES+=	c00492256d71.patch:-p1 # https://github.com/google/highway/pull/2672
 
 MAINTAINER=	jbeich@FreeBSD.org
 COMMENT=	Performance-portable, length-agnostic SIMD with runtime dispatch
@@ -17,6 +17,7 @@ TEST_DEPENDS=	googletest>0:devel/googletest
 USES=		cmake:testing compiler:c++11-lib
 USE_GITHUB=	yes
 GH_ACCOUNT=	google
+GH_TAGNAME=	322d55670ca88d49e2565cd72757c5139b2b9fc1
 CMAKE_ON=	BUILD_SHARED_LIBS HWY_SYSTEM_GTEST
 CMAKE_OFF+=	${CMAKE_TESTING_ON}
 
